--- a/test/storybook/docs/Testing/Decorators/Overview.mdx
+++ b/test/storybook/docs/Testing/Decorators/Overview.mdx
@@ -1,9 +1,9 @@
 import componentData from './Component/coverage-data.json';
-import propData from './Prop/coverage-data.json';
+import propData from './Prop/data/test-coverage.json';
 import stateData from './State/data/test-coverage.json';
-import eventData from './Event/coverage-data.json';
+import eventData from './Event/data/test-coverage.json';
 import listenData from './Listen/coverage-data.json';
-import methodData from './Method/coverage-data.json';
+import methodData from './Method/data/test-coverage.json';
 
 # Decorator Testing Overview
 
