Mark some docs as dev-only.  Clean up the overview

--- a/test/storybook/docs/.ai/testing/audit.mdx
+++ b/test/storybook/docs/.ai/testing/audit.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Testing/Framework/Audit" tags={['phase-1-complete']} />
+<Meta title="Testing/Framework/Audit" tags={['dev-only', 'phase-1-complete']} />
 
 # Testing Strategy Audit Log
 <div style={{display: 'inline-block', padding: '4px 12px', background: '#d3f9d8', color: '#2b8a3e', borderRadius: '16px', fontWeight: 'bold', marginBottom: '16px'}}>✅ Phase 1 Complete</div>
