--- a/test/storybook/docs/.ai/testing/context-pack.mdx
+++ b/test/storybook/docs/.ai/testing/context-pack.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Testing/Framework/Context Pack" tags={['pending-review']} />
+<Meta title="Testing/Framework/Context Pack" tags={['dev-only', 'pending-review']} />
 
 # GenAI Testing Context Pack
 <div style={{display: 'inline-block', padding: '4px 12px', background: '#d1fae5', color: '#065f46', borderRadius: '16px', fontWeight: 'bold', marginBottom: '16px'}}>Portable, context-first workflow</div>
