--- a/test/storybook/docs/.ai/testing/quickstart.mdx
+++ b/test/storybook/docs/.ai/testing/quickstart.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Testing/Framework/Quickstart" tags={['ai','coverage','stable']} />
+<Meta title="Testing/Framework/Quickstart" tags={['dev-only', 'ai','coverage','stable']} />
 
 # Quickstart: The 3-Step Testing Loop
 
