--- a/test/storybook/docs/.ai/testing/project-config.mdx
+++ b/test/storybook/docs/.ai/testing/project-config.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Testing/Framework/Project Config" tags={['pending-review']} />
+<Meta title="Testing/Framework/Project Config" tags={['dev-only', 'pending-review']} />
 
 # Project-Specific Coverage Matrix Configuration
 <div style={{display: 'inline-block', padding: '4px 12px', background: '#ffe066', color: '#7c5c00', borderRadius: '16px', fontWeight: 'bold', marginBottom: '16px'}}>⏳ Pending Review</div>
